[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oktaradiuscli"
authors = [
    {name="Mike Oshea",email="moshea@paraport.com"}
]
description = "Utility to obtain radius api jwt from OKTA"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
  "requests==2.27.1",
  "click==7.0",
  "beautifulsoup4==4.11.1",
  "ConfigParser==3.5.0",
  "validators==0.11.2",
  "okta"
]
[project.scripts]
okta-radiuscli = "oktaradiuscli.okta_radiuscli:main"
